--- a/index.html
+++ b/index.html
@@ -40,14 +40,23 @@
           <li>
             <a class="contact__item" href="mailto:info@devstudio.com"
               ><svg class="contact__icon" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
+                <use href="./images/icons.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
           <li>
             <a class="contact__item" href="tel:+380961111111"
               ><svg class="contact__icon" width="16" height="12">
-                <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
+        <button class="header__menu" type="button">
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
@@ -145,22 +154,26 @@
                   <li class="list__box">
                     <a href="" class="list__link"
                       ><svg class="list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-instagram"></use></svg></a>
+                        <use href="./images/icons.svg#icon-instagram"></use></svg
+                    ></a>
                   </li>
                   <li class="list__box">
                     <a href="" class="list__link"
                       ><svg class="list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-twitter"></use></svg></a>
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
                   </li>
                   <li class="list__box">
                     <a href="" class="list__link"
                       ><svg class="list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-facebook"></use></svg></a>
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
                   </li>
                   <li class="list__box">
                     <a href="" class="list__link"
                       ><svg class="list__icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-linkedin"></use></svg></a>
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
                   </li>
                 </ul>
               </div>
@@ -199,7 +212,12 @@
               </div>
             </li>
             <li class="member">
-              <img class="member__image" src="./images/img(6).jpg" alt="Микола Тарасов" width="270" />
+              <img
+                class="member__image"
+                src="./images/img(6).jpg"
+                alt="Микола Тарасов"
+                width="270"
+              />
               <div class="member__box">
                 <h3 class="member__subtitle">Микола Тарасов</h3>
                 <p class="member__paragraph">Marketing</p>
@@ -325,7 +343,9 @@
     <footer class="footer">
       <div class="container footer__box">
         <div>
-          <a class="footer__logo logo" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
+          <a class="footer__logo logo" href="./index.html"
+            ><span class="logo__accent">Web</span>Studio</a
+          >
           <address class="footer__address address">
             <ul class="address__card">
               <li class="address__item">
@@ -467,6 +487,7 @@
       </div>
     </div>
 
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
