--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             >
           </li>
         </ul>
-        <button class="header__menu" type="button">
-          <svg width="40" height="40">
+        <button class="header__menu js-open-menu" type="button">
+          <svg class="header__icon" width="40" height="40">
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
         </button>
       </div>
     </header>
-    <main>
+    <!-- <main>
       <section class="section hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
@@ -424,7 +424,44 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
+
+    <div class="mobile-menu js-menu-container">
+      <button class="mobile-menu__close js-close-menu" type="button">
+        <svg class="mobile-menu__icon" width="40" height="40">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <div class="mobile-menu__container">
+        <ul class="mobile-menu__nav">
+          <li href="./index.html" class="mobile-menu__list">Студія</li>
+          <li href="./portfolio.html" class="mobile-menu__list">Портфоліо</li>
+          <li href="#" class="mobile-menu__list">Контакти</li>
+        </ul>
+        <ul class="mobile-menu__contact">
+          <li>
+            <a class="mobile-menu__tel" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+          <li>
+            <a class="mobile-menu__mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+        </ul>
+        <ul class="mobile-menu__networks">
+          <li class="mobile-menu__box">
+            <a href="" class="mobile-menu__link">Instagram</a>
+          </li>
+          <li class="mobile-menu__box">
+            <a href="" class="mobile-menu__link">Twitter</a>
+          </li>
+          <li class="mobile-menu__box">
+            <a href="" class="mobile-menu__link">Facebook</a>
+          </li>
+          <li class="mobile-menu__box">
+            <a href="" class="mobile-menu__link">LinkedIn</a>
+          </li>
+        </ul>
+      </div>
+    </div>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="backdrop__modal modal">
