--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
       </div>
     </header>
     <main>
-      <section class="section hero">
+      <!-- <section class="section hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero__button" data-modal-open type="button">Замовити послугу</button>
         </div>
-      </section>
+      </section> -->
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
@@ -290,7 +290,7 @@
           </ul>
         </div>
       </section>
-      <section class="section customers">
+      <!-- <section class="section customers">
         <div class="container">
           <h2 class="customers__title">Постійні клієнти</h2>
           <ul class="customers__list">
@@ -424,7 +424,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <div class="mobile-menu js-menu-container">
       <button class="mobile-menu__close js-close-menu" type="button">
