--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="section customers">
+      <section class="section customers">
         <div class="container">
           <h2 class="customers__title">Постійні клієнти</h2>
           <ul class="customers__list">
@@ -338,7 +338,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="container footer__box">
