--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer__box">
         <div>
           <a class="footer__logo logo" href="./index.html"
@@ -413,18 +413,19 @@
                 type="email"
                 placeholder="E-mail"
               />
-
-              <button class="footer__input-button" type="submit">
-                Підписатися
-                <svg class="footer__icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-send"></use>
-                </svg>
-              </button>
+              <div class="footer__button-box">
+                <button class="footer__input-button" type="submit">
+                  Підписатися
+                  <svg class="footer__icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-send"></use>
+                  </svg>
+                </button>
+              </div>
             </div>
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <div class="mobile-menu js-menu-container">
       <button class="mobile-menu__close js-close-menu" type="button">
