--- a/index.html
+++ b/index.html
@@ -342,64 +342,66 @@
     </main>
     <footer class="footer">
       <div class="container footer__box">
-        <div>
-          <a class="footer__logo logo" href="./index.html"
-            ><span class="logo__accent">Web</span>Studio</a
-          >
-          <address class="footer__address address">
-            <ul class="address__card">
-              <li class="address__item">
-                <a
-                  class="address__link"
-                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
+        <div class="footer__nav-box">
+          <div class="footer__address-box">
+            <a class="footer__logo logo" href="./index.html"
+              ><span class="logo__accent">Web</span>Studio</a
+            >
+            <address class="footer__address address">
+              <ul class="address__card">
+                <li class="address__item">
+                  <a
+                    class="address__link"
+                    href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="address__item">
+                  <a class="address__link-contact" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="address__item">
+                  <a class="address__link-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer__social-box">
+            <h2 class="footer__social-title">приєднуйтесь</h2>
+            <ul class="footer__social-list networks">
+              <li class="networks__box">
+                <a href="" class="networks__link">
+                  <svg width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address__item">
-                <a class="address__link-contact" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
+              <li class="networks__box">
+                <a href="" class="networks__link">
+                  <svg width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="address__item">
-                <a class="address__link-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+              <li class="networks__box">
+                <a href="" class="networks__link">
+                  <svg width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="networks__box">
+                <a href="" class="networks__link">
+                  <svg width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer__social-box">
-          <h2 class="footer__social-title">приєднуйтесь</h2>
-          <ul class="footer__social-list networks">
-            <li class="networks__box">
-              <a href="" class="networks__link">
-                <svg width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="networks__box">
-              <a href="" class="networks__link">
-                <svg width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="networks__box">
-              <a href="" class="networks__link">
-                <svg width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="networks__box">
-              <a href="" class="networks__link">
-                <svg width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="footer__e-mail-input">
           <form name="footer-form">
@@ -467,7 +469,7 @@
       </div>
     </div>
 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="backdrop__modal modal">
         <button type="button" class="close" data-modal-close>
           <svg class="close__icon" width="18" height="18">
@@ -526,7 +528,7 @@
           <button class="modal__button" type="submit">Відправити</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
