--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
       </div>
     </header>
     <main>
-      <!-- <section class="section hero">
+      <section class="section hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero__button" data-modal-open type="button">Замовити послугу</button>
         </div>
-      </section> -->
+      </section>
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
