--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
       </div>
     </div>
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="backdrop__modal modal">
         <button type="button" class="close" data-modal-close>
           <svg class="close__icon" width="18" height="18">
@@ -521,14 +521,14 @@
               <use href="./images/icons.svg#icon-icon-check"></use>
             </svg>
           </div>
-          <label class="modal__label" for="terms-checkbox">
+          <label class="modal__checkbox" for="terms-checkbox">
             Погоджуюся з розсилкою та приймаю
             <a class="modal__link" href="#">Умови договору</a>
           </label>
           <button class="modal__button" type="submit">Відправити</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
