--- a/index.html
+++ b/index.html
@@ -123,28 +123,37 @@
           <ul class="third__cards">
             <li class="third__card activity">
               <img
-                srcset="./images/desktop@1x.jpg, ./images/desktop@2x.jpg"
+                srcset="./images/desktop@1x.jpg 1x, ./images/desktop@2x.jpg 2x"
                 src="./images/desktop@1x.jpg"
                 alt="Написання коду за комп'ютером"
+                <!--
                 width="370"
+                --
+              />
               />
               <div class="activity__name">Десктопні додатки</div>
             </li>
             <li class="third__card activity">
               <img
-                srcset="./images/desktop2@1x.jpg, ./images/desktop2@2x.jpg"
+                srcset="./images/desktop2@1x.jpg 1x, ./images/desktop2@2x.jpg 2x"
                 src="./images/desktop2@1x.jpg"
                 alt="Розроблення мобільного додатку"
+                <!--
                 width="370"
+                --
+              />
               />
               <div class="activity__name">Мобільні додатки</div>
             </li>
             <li class="third__card activity">
               <img
-                srcset="./images/desktop3@1x.jpg, ./images/desktop3@2x.jpg"
+                srcset="./images/desktop3@1x.jpg 1x, ./images/desktop3@2x.jpg 2x"
                 src="./images/desktop3@1x.jpg"
                 alt="Коло кольорів"
+                <!--
                 width="370"
+                --
+              />
               />
               <div class="activity__name">Дизайнерські рішення</div>
             </li>
