--- a/index.html
+++ b/index.html
@@ -180,12 +180,7 @@
                   srcset="./images/igormobile@1x.jpg 1x, ./images/igormobile@2x.jpg 2x"
                   media="(max-width: 767px)"
                 />
-                <img
-                  class="member__image"
-                  src="./images/igormobile@1x.jpg"
-                  alt="Ігор Дем'яненко"
-                  width="270"
-                />
+                <img class="member__image" src="./images/igormobile@1x.jpg" alt="Ігор Дем'яненко" />
               </picture>
 
               <div class="member__box">
@@ -235,12 +230,7 @@
                   srcset="./images/olgamobile@1x.jpg 1x, ./images/olgamobile@2x.jpg 2x"
                   media="(max-width: 767px)"
                 />
-                <img
-                  class="member__image"
-                  src="./images/olgamobile@1x.jpg"
-                  alt="Ольга Рєпіна"
-                  width="270"
-                />
+                <img class="member__image" src="./images/olgamobile@1x.jpg" alt="Ольга Рєпіна" />
               </picture>
               <div class="member__box">
                 <h3 class="member__subtitle">Ольга Рєпіна</h3>
@@ -293,7 +283,6 @@
                   class="member__image"
                   src="./images/mykolamobile@1x.jpg"
                   alt="Микола Тарасов"
-                  width="270"
                 />
               </picture>
               <div class="member__box">
@@ -347,7 +336,6 @@
                   class="member__image"
                   src="./images/mykhaylomobile@1x.jpg"
                   alt="Михайло Єрмаков"
-                  width="270"
                 />
               </picture>
               <div class="member__box">
