--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
       </button>
       <div class="mobile-menu__container">
         <ul class="mobile-menu__nav">
-          <li href="./index.html" class="mobile-menu__list">Студія</li>
+          <li href="./index.html" class="mobile-menu__list mobile-menu__list--current">Студія</li>
           <li href="./portfolio.html" class="mobile-menu__list">Портфоліо</li>
           <li href="#" class="mobile-menu__list">Контакти</li>
         </ul>
