--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="contact__box">
             <a class="contact__item" href="tel:+380961111111"
               ><svg class="contact__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
